--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=msvc-usuarios
-server.port=8001
+#si la variable de ambiente(ENV) PORT no existe va a tomar el valor 8001 por defecto
+server.port=${PORT:8001}
 spring.datasource.url=jdbc:mysql://mysql8:3306/msvc_usuarios?serverTimezone=America/Santiago&allowPublicKeyRetrieval=false
 spring.datasource.username=mysql
 spring.datasource.password=sasa
