92. Ejecutando todo con docker-compose Up y Down para detener y eliminar todo

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   mysql8:
+    container_name: mysql8
     image: mysql:8
     ports:
       - "3008:3306"
@@ -15,6 +16,7 @@ services:
     networks:
       - spring
   postgres17:
+    container_name: postgres17
     image: postgres:17-alpine
     ports:
       - "5433:5432"
@@ -28,6 +30,7 @@ services:
       - spring
 
   msvc-usuarios:
+    container_name: msvc-usuarios
     image: usuarios:latest
     ports:
       - "8001:8001"
@@ -40,6 +43,7 @@ services:
     restart: always
 
   msvc-cursos:
+    container_name: msvc-cursos
     image: cursos:latest
     ports:
       - "8002:8002"
@@ -49,11 +53,15 @@ services:
       - spring
     depends_on:
       - postgres17
+      - msvc-usuarios
     restart: always
 
 volumes:
   data-mysql:
+    name: data-mysql
   data-postgres:
+    name: data-postgres
 
 networks:
   spring:
+    name: spring
