--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,8 +37,13 @@ services:
 #      dockerfile: ./msvc-usuarios/Dockerfile
     ports:
       - "8001:8001"
-    env_file:
-      - ./msvc-usuarios/.env
+    environment:
+      PORT: 8001
+      DB_HOST: mysql8:3306
+      DB_DATABASE: msvc_usuarios
+      DB_USERNAME: mysql
+      DB_PASSWORD: sasa
+      CURSOS_URL: msvc-cursos:8002
     networks:
       - spring
     depends_on:
@@ -53,8 +58,13 @@ services:
 #      dockerfile: ./msvc-cursos/Dockerfile
     ports:
       - "8002:8002"
-    env_file:
-      - ./msvc-cursos/.env
+    environment:
+      PORT: 8002
+      DB_HOST: postgres17:5432
+      DB_DATABASE: msvc_cursos
+      DB_USERNAME: postgres
+      DB_PASSWORD: sasa
+      USUARIOS_URL: msvc-usuarios:8001
     networks:
       - spring
     depends_on:
